Add initial cv website files

--- a/ROOT.html/contact.html
+++ b/ROOT.html/contact.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 
-<style>
-*ol{
-    text
-}
 
-
-</style>
 
 <head>
     <title>princess edikan contact page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <div id="section1"></div>
@@ -28,7 +23,7 @@
             <li><strong>RESIDENTIAL ADDRESS</strong></li> 
 
         </ul>
-        <ol>
+        <ol class="gray">
             <li>43 market road , off akpan andem market, uyo . Akwa Ibom Steate, NIGERIA</li>
             <li>33 oron road , uyo. Akwa Ibom State , Nigeria</li>
             <li>48 ikpa road, uyp . Akwa Ibom State, Nigeria</li>
@@ -38,7 +33,7 @@
         <ul>
             <li><strong>OFFICE ADDRESS</strong></li>
         </ul>
-        <ol>
+        <ol class="gray">
             <li>38 Aka road, uyo . Akwa Ibom State, Nigeria</li>
             <li>33 esuk street, off calabar road , calabar . Cross River State, Nigeria</li>
             <li>1 barracks road , calabar.Cross River State, Nigeria</li>
@@ -50,7 +45,7 @@
         <ul>
             <li>PHONE NUMBERS<em>(personal call line)</em></li>
         </ul>
-        <ol>
+        <ol class="gray">
             <li>+234 8072263767</li>
             <li>+234 9072657254</li>
         </ol>
@@ -59,7 +54,7 @@
             <li>PHONE NUMBER<em>(Business call line)</em></li>
         </ul>
 
-        <ol>
+        <ol class="gray">
             <li> +234 8084745639</li>
             <li> +234 9076829276</li>
         </ol>
@@ -72,7 +67,7 @@
         </ul>
 
 
-        <ol>
+        <ol class="gray">
             <li>INSTAGRAM : princess edk</li>
             <li> FACEBOOK : princess edikan</li>
             <li>X : princess edi</li>
@@ -83,7 +78,7 @@
             <li><strong>SOCIAL MEDIA HANDLE <em>(Business)</em></strong></li>
         </ul>
 
-        <ol>
+        <ol  class="gray">
             <li>INSTAGRAM : EddyStiches Apparel</li>
             <li>FACEBOOK : EddyStiches</li>
             <li>X : EddyStiches xx</li>
@@ -98,7 +93,7 @@
 
         </ul>
 
-        <ol>
+        <ol class="gray">
             <li> princessedikan001@gmail.com</li>
             <li>princessedi@yahoo.com</li>
         </ol>
@@ -109,7 +104,7 @@
             <li><strong>MAIL ADDRESS <em>(Business)</em></strong></li>
         </ul>
 
-        <p><ol>
+        <p><ol class="gray">
             <li>Eddystiches@gmail.com</li>
             <li>Eddybrand@yahoo.com</li>
         </ol></p>
